# LAB3

./: .bashrc  PaqueteDynamixelMatlabConexión  PhantomX.asv  PhantomX.m  README.md
LAB3CK/.catkin_tools/profiles/default/: devel_collisions.txt
LAB3CK/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
LAB3CK/devel/.private/catkin_tools_prebuild/: .catkin
LAB3CK/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
LAB3CK/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
LAB3CK/devel/.private/dynamixel_one_motor/: .catkin  .rosinstall  setup.sh
LAB3CK/devel/.private/dynamixel_one_motor/lib/pkgconfig/: dynamixel_one_motor.pc
LAB3CK/devel/.private/dynamixel_one_motor/share/dynamixel_one_motor/cmake/: dynamixel_one_motorConfig.cmake
LAB3CK/devel/lib/dynamixel_one_motor/: jointSrv.py  jointSub.py
LAB3CK/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  dynamixel_one_motor.pc
LAB3CK/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
LAB3CK/devel/share/dynamixel_one_motor/cmake/: dynamixel_one_motorConfig-version.cmake  dynamixel_one_motorConfig.cmake
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/devel/: .catkin
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/devel/include/dynamixel_workbench_msgs/: AX.h  DynamixelInfo.h  DynamixelState.h  EX.h  MX2.h  MXExt.h  PRO.h  RX.h  XH.h  XL.h  XL320.h  XM.h
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/devel/lib/pkgconfig/: dynamixel_workbench_msgs.pc
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/devel/share/dynamixel_workbench_msgs/cmake/: dynamixel_workbench_msgs-msg-extras.cmake  dynamixel_workbench_msgs-msg-paths.cmake  dynamixel_workbench_msgsConfig.cmake
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/install/: local_setup.sh  setup.sh
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/install/include/dynamixel_workbench_msgs/: DynamixelCommandRequest.h  DynamixelCommandResponse.h  DynamixelLoadInfo.h  DynamixelStateList.h  GetDynamixelInfoRequest.h  GetDynamixelInfoResponse.h  MX.h  MX2Ext.h  PROExt.h  XMExt.h  visibility_control.h
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/install/m/+ros/+internal/+ros/+custommessages/+dynamixel_workbench_msgs/: dynamixelCommandResponse.m  dynamixelInfo.m  dynamixelStateList.m  eX.m  getDynamixelInfoRequest.m  mXExt.m  (+5 more)
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/install/m/+ros/+msggen/+dynamixel_workbench_msgs/: DynamixelCommandRequest.m  DynamixelCommandResponse.m  DynamixelLoadInfo.m  DynamixelState.m  EX.m  MX.m  MX2.m  MX2Ext.m  RX.m  XL320.m  XMExt.m
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/install/share/dynamixel_workbench_msgs/cmake/: dynamixel_workbench_msgsConfig.cmake
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/src/: CMakeLists.txt
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/src/dynamixel_workbench_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/src/dynamixel_workbench_msgs/m/+ros/+internal/+ros/+custommessages/+dynamixel_workbench_msgs/: aX.m  dynamixelCommandRequest.m  dynamixelLoadInfo.m  dynamixelState.m  mX.m  mX2.m  mX2Ext.m  pROExt.m  xL.m  xL320.m  xM.m
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/src/dynamixel_workbench_msgs/m/+ros/+msggen/+dynamixel_workbench_msgs/: AX.m  DynamixelInfo.m  DynamixelStateList.m  GetDynamixelInfoRequest.m  GetDynamixelInfoResponse.m  MXExt.m  PRO.m  PROExt.m  XH.m  XL.m  XM.m
dyna_ws/src/dynamixel-workbench-msgs/matlab_msg_gen_ros1/glnxa64/src/dynamixel_workbench_msgs/src/: dynamixel_workbench_msgs_AX_common.cpp  dynamixel_workbench_msgs_DynamixelCommandRequest_common.cpp  dynamixel_workbench_msgs_DynamixelCommandResponse_common.cpp  dynamixel_workbench_msgs_DynamixelCommand_request_common.cpp  dynamixel_workbench_msgs_DynamixelCommand_response_common.cpp  dynamixel_workbench_msgs_DynamixelInfo_common.cpp  dynamixel_workbench_msgs_DynamixelLoadInfo_common.cpp  dynamixel_workbench_msgs_DynamixelStateList_common.cpp  dynamixel_workbench_msgs_DynamixelState_common.cpp  dynamixel_workbench_msgs_EX_common.cpp  dynamixel_workbench_msgs_GetDynamixelInfoRequest_common.cpp  dynamixel_workbench_msgs_GetDynamixelInfoResponse_common.cpp  dynamixel_workbench_msgs_GetDynamixelInfo_request_common.cpp  dynamixel_workbench_msgs_GetDynamixelInfo_response_common.cpp  dynamixel_workbench_msgs_MX2Ext_common.cpp  dynamixel_workbench_msgs_MX2_common.cpp  dynamixel_workbench_msgs_MXExt_common.cpp  dynamixel_workbench_msgs_MX_common.cpp  dynamixel_workbench_msgs_PROExt_common.cpp  dynamixel_workbench_msgs_PRO_common.cpp  dynamixel_workbench_msgs_RX_common.cpp  dynamixel_workbench_msgs_XH_common.cpp  dynamixel_workbench_msgs_XL320_common.cpp  dynamixel_workbench_msgs_XL_common.cpp  dynamixel_workbench_msgs_XMExt_common.cpp  dynamixel_workbench_msgs_XM_common.cpp  dynamixel_workbench_msgs_msg_AX_publisher.cpp  dynamixel_workbench_msgs_msg_AX_subscriber.cpp  dynamixel_workbench_msgs_msg_DynamixelCommandRequest_publisher.cpp  dynamixel_workbench_msgs_msg_DynamixelCommandRequest_subscriber.cpp  dynamixel_workbench_msgs_msg_DynamixelCommandResponse_publisher.cpp  dynamixel_workbench_msgs_msg_DynamixelCommandResponse_subscriber.cpp  dynamixel_workbench_msgs_msg_DynamixelInfo_publisher.cpp  dynamixel_workbench_msgs_msg_DynamixelInfo_subscriber.cpp  dynamixel_workbench_msgs_msg_DynamixelLoadInfo_publisher.cpp  dynamixel_workbench_msgs_msg_DynamixelLoadInfo_subscriber.cpp  dynamixel_workbench_msgs_msg_DynamixelStateList_publisher.cpp  dynamixel_workbench_msgs_msg_DynamixelStateList_subscriber.cpp  dynamixel_workbench_msgs_msg_DynamixelState_publisher.cpp  dynamixel_workbench_msgs_msg_DynamixelState_subscriber.cpp  (+34 more)
