<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_workbench_msgs</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="TODO@EMAIL.COM">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
<!-- Generated 13-Oct-2022 23:08:26 -->
<!-- Copyright 2019-2020 The MathWorks, Inc. -->
